--- a/natty-web/manifest.json
+++ b/natty-web/manifest.json
@@ -1,7 +1,7 @@
 {
- "name": "Tefek's Homepage",
- "short_name": "Tefek",
- "description": "Tefek's central website.",
+ "name": "Natty's Homepage",
+ "short_name": "Natty",
+ "description": "Natty's central website.",
  "lang": "en-US",
  "orientation": "any",
  "display": "standalone",
