--- a/nginx-docker/nginx.conf
+++ b/nginx-docker/nginx.conf
@@ -15,7 +15,7 @@ http {
     keepalive_timeout 3000;
 
     server {
-        root /www/tefek.cz;
+        root /www/natty.sh;
 
         index index.php index.html index.htm;
         client_max_body_size 32m;
@@ -33,7 +33,7 @@ http {
         }
 
         location ~ \.php$ {
-            fastcgi_pass tefek_cz_php:9000;
+            fastcgi_pass natty_sh_php:9000;
             fastcgi_index index.php;
             include fastcgi.conf;
         }
